deploy/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poruko-api
  namespace: poruko
  labels:
    app.kubernetes.io/name: poruko
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: poruko
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: poruko
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: ghcr.io/fkupper/poruko:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: poruko
  labels:
    app.kubernetes.io/name: poruko
    app.kubernetes.io/component: api
spec:
  selector:
    app.kubernetes.io/name: poruko
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
